--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\aless\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\Estudiante\\AppData\\Roaming\\NetBeans\\20\\build.properties
